[package]
name = "rweather"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.30", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
colored = "2"
